# category-5-api

./: Cargo.toml
src/: macros.rs  main.rs
src/bot/: mod.rs  parse_utils.rs
src/bot/commands/: event.rs  math.rs  mod.rs  owner.rs
src/db/: crud.rs  mod.rs
src/db/data/: attendance.rs  event.rs  mod.rs  student.rs
